--- a/ordoFile/ResourceDictionaries/MainViewResourceDictionary.xaml
+++ b/ordoFile/ResourceDictionaries/MainViewResourceDictionary.xaml
@@ -1,8 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:conv="clr-namespace:ordoFile.Converters">
+
+    <conv:NullVisibilityConverter x:Key="visibilityConverter" />
+
     <Style TargetType="Window" x:Name="MainWindow">
-        <Setter Property="Visibility" Value="{Binding WindowVisibility}" />
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding WindowVisible}" Value="True">
+                <Setter Property="Visibility" Value="Visible" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding WindowVisible}" Value="False">
+                <Setter Property="Visibility" Value="Hidden" />
+            </DataTrigger>
+        </Style.Triggers>
     </Style>
-    
 </ResourceDictionary>
