--- a/ordoFile/App.xaml
+++ b/ordoFile/App.xaml
@@ -1,7 +1,5 @@
 ﻿<Application x:Class="ordoFile.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
-    
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
 </Application>
