--- a/ordoFile/MainWindow.xaml
+++ b/ordoFile/MainWindow.xaml
@@ -6,28 +6,35 @@
     mc:Ignorable="d"
     xmlns:local="clr-namespace:ordoFile" 
     xmlns:vw="clr-namespace:ordoFile.ViewModels" 
+    xmlns:conv="clr-namespace:ordoFile.Converters"
     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
 	xmlns:ic="http://schemas.microsoft.com/expression/2010/interactions"
 	x:Class="ordoFile.MainWindow"
 	x:Name="Window" 
 	Title="MainWindow"
 	MinWidth="715" MinHeight="448"
-	Width="715" Height="478" ResizeMode="CanResizeWithGrip" WindowStyle="None" AllowsTransparency="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+	Width="715" Height="478" 
+    ResizeMode="CanResizeWithGrip" WindowStyle="None" AllowsTransparency="True"
     BorderThickness="0">
-
+    
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/ResourceDictionaries/NamedStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <conv:BoolToVisibilityConverter x:Key="BoolVisibilityConverter"/>
         </ResourceDictionary>
     </Window.Resources>
-    
-    <Window.DataContext>
-        <vw:MainWindowViewModel />
-    </Window.DataContext>
-    
-	<Grid x:Name="LayoutRoot" 
+
+    <Window.Style>
+        <Style TargetType="Window">
+            <Setter Property="Visibility" 
+                        Value="{Binding WindowVisible, 
+                                Converter={StaticResource BoolVisibilityConverter}, Mode=TwoWay}" />
+        </Style>
+    </Window.Style>
+
+    <Grid x:Name="LayoutRoot" 
 		  Background="#E9E9E9">
         <DockPanel LastChildFill="True">
             <Grid Height="30"
